# frontend-ha-enterprise

./: package.json  pyproject.toml
.github/workflows/: release.yaml
demo/src/configs/sections/: entities.ts
hassio/src/update-available/: update-available-card.ts
script/: core
src/common/util/: get-device-limit.ts
src/data/: blueprint.ts  building.ts  onboarding.ts  person.ts
src/onboarding/: onboarding-create-user.ts  onboarding-loading.ts
src/panels/config/dashboard/: ha-config-dashboard.ts
src/panels/config/devices/: ha-config-devices-dashboard.ts
src/panels/config/info/: ha-config-info.ts
src/panels/config/integrations/: ha-config-integrations-dashboard.ts
src/panels/config/network/: ha-config-section-network.ts
src/panels/config/person/: constants.ts  dialog-building-detail.ts  dialog-building-manager.ts  ha-config-person.ts  show-dialog-person-detail.ts
src/panels/profile/: ha-change-password-card.ts
src/translations/: en.json
